--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,23 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
+  "root": true,
+  "plugins": ["@typescript-eslint", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "some-other-config-you-use",
+    "prettier"
+  ],
   "rules": {
-    "react/react-in-jsx-scope": "off"
-  }
+    "@typescript-eslint/strict-boolean-expressions": [
+      2,
+      {
+        "allowString": false,
+        "allowNumber": false
+      }
+    ],
+    "prettier/prettier": "error"
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": { "project": ["./tsconfig.json"] },
+  "ignorePatterns": ["src/**/*.test.ts", "src/frontend/generated/*"]
 }
