--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext  \"**/*.{js,jsx,ts,tsx,md}\"",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\"",
+    "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
