sqlite 시각화 extension 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,15 @@
     "typescriptreact"
   ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  }
+    "source.fixAll.eslint": "explicit"
+  },
+  "sqltools.connections": [
+    {
+      "previewLimit": 50,
+      "driver": "SQLite",
+      "name": "gallery",
+      "database": "gallery.db"
+    }
+  ],
+  "sqltools.useNodeRuntime": true
 }
