d1 index 파일 ts로 롤백

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "d1/src/index.js"
+    "d1/src/index.ts"
   ],
   "exclude": ["node_modules"]
 }
